@@ -57,47 +57,33 @@ KHTMLView_Patched::KHTMLView_Patched(QWidget *parent = 0L, const char *name = 0L
 
 KHTMLView_Patched::~KHTMLView_Patched()
 {
+  if (view) delete view;
 }
 
-void KHTMLView_Patched::draw(SavedPage *p, QPaintDevice *dev, int width, int height, float scale)
+void KHTMLView_Patched::draw(SavedPage *p, QPainter *painter, int width, int height, float scale)
 {
-//  cerr << "drawing right??????????????" << endl;
-  
-//  QPainter::redirect(this, dev);
-//  QPaintEvent pe(QRect(0, 0, width, height));
-//  QApplication::sendEvent(this, &pe);
-//  QPainter::redirect(this, 0);
+  QPixmap pix(width, height);
 
-//  cerr << "anyway, we're done..." << endl;
-  
-//  ((KHTMLWidget_Patched *)view)->draw(dev, width, height);
+  ((KHTMLWidget_Patched*)view)->draw(&pix, width, height);
 
-  QPixmap pix(width - p->xOffset, height - p->yOffset);
-
-  cerr << "drawing to pixmap" << endl;
+//  if (scale != 1.0)
+//     tmpPainter.scale(scale, scale);
      
-  ((KHTMLWidget_Patched*)view)->draw(&pix, width - p->xOffset, height - p->yOffset);
+  painter->drawPixmap(0, 0, pix);
 
-  cerr << "painting to " << p->xOffset << " " << p->yOffset << " from pixmap with size " << pix.width() << " " << pix.height() << endl;
-  cerr << "required width is " << width << " and the height is " << height << endl;  
-  
-  QPainter tmpPainter;
-  tmpPainter.begin(dev);
-  
-  if (scale != 1.0)
-     tmpPainter.scale(scale, scale);
-     
-  tmpPainter.drawPixmap(p->xOffset, p->yOffset, pix);
-  tmpPainter.end();  
-//  bitBlt(dev, p->xOffset, p->yOffset, &pix, 0, 0, pix.width(), pix.height(), CopyROP, true);
-
+/*
   if (p->frames)
      {
        cerr << "iterating" << endl;
        QListIterator<SavedPage> it(*p->frames);
        for (; it.current(); ++it)
-           draw(it.current(), dev, width, height, scale);
+           {
+	     KHTMLView *v = findView( it.current()->frameName );
+	     if (v)
+	        ((KHTMLView_Patched*)v)->draw(it.current(), painter, width, height, scale);
+	   }     
      }     
+*/     
 }
 
 KHTMLView *KHTMLView_Patched::newView(QWidget *parent = 0L, const char *name = 0L, int flags = 0L)
